# github-module-catalog

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  discover.yml
catalog/: README.md  catalog.json  catalog.yaml  manifest.json  taxonomy.md
catalog/modules/: access-control.md  ai-agent-framework.md  ai-ml.md  api-backend.md  api-gateway.md  api-testing.md  audio-processing.md  auth.md  browser-e2e-testing.md  cache-key-value.md  ci-cd.md  cli.md  computer-vision.md  configuration-management.md  container-tooling.md  content-management.md  cryptography.md  dashboard-ui.md  database-storage.md  devops.md  distributed-tracing.md  document-database.md  error-tracking.md  graphql-api.md  identity-provider.md  image-processing.md  infrastructure-as-code.md  kubernetes-tooling.md  llm-runtime.md  log-management.md  malware-analysis.md  media-downloader.md  media-streaming.md  media.md  model-training.md  network-security.md  object-storage.md  observability.md  package-manager.md  penetration-testing.md  (+23 more)
docs/: operations.md  taxonomy.md
docs/plans/: 2026-07-13-github-module-catalog-design.md  2026-07-13-github-module-catalog-mvp.md  2026-07-13-ranked-catalog-homepage-design.md  2026-07-13-ranked-catalog-homepage.md  2026-07-13-taxonomy-v2-design.md  2026-07-13-taxonomy-v2.md
scripts/: publish_catalog.py
scripts/catalog_publisher/: __init__.py  cli.py  constants.py  filesystem.py  model.py  publication.py  rendering.py  validation.py
src/github_module_catalog/: __init__.py  catalog.py  cli.py  (+10 more)
tests/: test_package.py
(+16 files in other folders)
