[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[project]
name = "github-module-catalog"
version = "0.1.0"
description = "A reusable module catalog for public GitHub repositories."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28,<1",
    "pydantic>=2.11,<3",
    "PyYAML>=6.0,<7",
    "typer>=0.16,<1",
]

[project.scripts]
ghmod = "github_module_catalog:main"

[dependency-groups]
dev = [
    "hatchling==1.31.0",
    "mypy>=1.17,<2",
    "pip-audit>=2.9,<3",
    "pytest>=9.0.3,<10",
    "pytest-cov>=6.2,<7",
    "respx>=0.22,<1",
    "ruff>=0.12,<1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]

[tool.pytest.ini_options]
addopts = [
    "--cov=github_module_catalog",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
]
testpaths = ["tests"]
